tests/ui/underscore_in_goal.stderr
error: Cannot have _ in goal atom of rule.
 --> tests/ui/underscore_in_goal.rs:7:8
  |
7 |     Ok(_) <- Ok(_);
  |        ^
